# mors_mpc

./: .gitignore  example1_leg_imp_control.sh  example2_leg_grf_control.sh  example3_body_imp_control.sh  example4_contact_estimation.sh  start_controller.sh  test1_odometry.sh  test2_odometry.sh  test3_state_estimation.sh  test4_leg_imp_state_estim.sh  test5_mpc_body.sh  test6_mpc_locomotion.sh  test7_mpc_locomotion.sh
ActionController/: CMakeLists.txt
BHI360_IMU/: CMakeLists.txt
BHI360_IMU/src/: bhi360_imu.cpp
GaitScheduler/: CMakeLists.txt  command_shaper.py  contact_state_fsm.py  hopf_gait_generator.py  lcm_data_exchange_gs.py  main.py
GaitScheduler/include/: CommandShaper.hpp  ContactStateFSM.hpp  HopfGaitScheduler.hpp  lcm_data_exchange_gs.hpp
GaitScheduler/src/: CommandShaper.cpp  ContactStateFSM.cpp  HopfGaitScheduler.cpp  lcm_data_exchange_gs.cpp  main.cpp
HeightMapper/: CMakeLists.txt
HeightMapper/src/: main.cpp  test.cpp
LegController/: CMakeLists.txt
LegController/include/: ikine.hpp  lcm_data_exchange_lc.hpp  leg_control.hpp
LegController/src/: ikine.cpp  lcm_data_exchange_lc.cpp  leg_control.cpp  main.cpp
LocomotionController/: CMakeLists.txt
LocomotionController/include/: CommandShaper.hpp  ContactStateFSM.hpp  ConvexMpc.hpp  ConvexMpcThread.hpp  FootStepPlanner.hpp  GaitTransition.hpp  LcmDataExchange.hpp  SwingController.hpp  SwingTrajectoryGenerator.hpp
LocomotionController/src/: CommandShaper.cpp  ContactStateFSM.cpp  ConvexMpc.cpp  ConvexMpcThread.cpp  FootStepPlanner.cpp  GaitTransition.cpp  LcmDataExchange.cpp  SwingController.cpp  SwingTrajectoryGenerator.cpp  main.cpp
MorsLogger/: CMakeLists.txt
MorsLogger/include/: csv_maintaner.hpp  lcm_data_exchange_ml.hpp
MorsLogger/src/: csv_maintaner.cpp  lcm_data_exchange_ml.cpp  main.cpp
RealsenseCamera/: CMakeLists.txt
RealsenseCamera/src/: main.cpp
RobotModeController/: CMakeLists.txt
RobotModeController/include/: lcm_data_exchange_rm.hpp
RobotModeController/src/: lcm_data_exchange_rm.cpp  main.cpp
StanceControllerMPC/: CMakeLists.txt
StanceControllerMPC/include/: convex_mpc.hpp  lcm_data_exchange_sc.hpp
StanceControllerMPC/src/: convex_mpc.cpp  lcm_data_exchange_sc.cpp  main.cpp
StateEstimator/: CMakeLists.txt
StateEstimator/include/: gm_force_observer.hpp  lcm_data_exchange_se.hpp  leg_state.hpp  low_pass_filtering.hpp  sensor_fusion.hpp
StateEstimator/src/: gm_force_observer.cpp  lcm_data_exchange_se.cpp  leg_state.cpp  low_pass_filtering.cpp  main.cpp  sensor_fusion.cpp
SwingController/: foot_step_planner.py  lcm_data_exchange_sc.py  main.py  swing_controller.py  swing_traj_generator.py
common/include/: SimpleGaitScheduler.hpp  structs.hpp  system_functions.hpp
common/src/: SimpleGaitScheduler.cpp  leg_model.cpp  system_functions.cpp
config/: channels.yaml  emergency.yaml  gait_scheduler.yaml  imp_config.yaml  robot_config.yaml  stance_controller_mpc.yaml  state_estimator.yaml  swing_controller.yaml  timesteps.yaml
examples/: ForwardKinematics.py  TrajectoryGenerator.py  example1_leg.py  example2_leg.py  example3_body.py  example4_body_mpc.py  example5_mpc_locomotion.py  example6_contact_estimation.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
